Issue #2539490 by joelstein: Less: Wrap numbers in parentheses when calculating percentage

--- a/starterkits/less/less/overrides.less
+++ b/starterkits/less/less/overrides.less
@@ -412,12 +412,12 @@ ul li.leaf {
     padding-left: 2em;
     @media (min-width: @screen-sm-min) {
       border-left: 1px solid @table-border-color;
-      left: percentage(6/12);
+      left: percentage((6/12));
       margin-left: (@grid-gutter-width / 2);
       position: absolute;
     }
     @media (min-width: @screen-md-min) {
-      left: percentage(4/12);
+      left: percentage((4/12));
     }
   }
   .progress {
